--- a/style.css
+++ b/style.css
@@ -24,3 +24,16 @@ h1 {
   color: #ffffff;
   font-size: 5vw;
 }
+
+#about {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 7vw;
+  margin-top: 8vh;
+
+  font-family: "agenda", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+  color: #ffffff;
+  font-size: 1vw;
+}
